--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,17 +14,16 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.3.1",
     "@mui/material": "^6.3.1",
-
+    "@react-google-maps/api": "^2.20.5",
     "@react-leaflet/core": "^2.1.0",
     "axios": "^1.7.9",
-    "leaflet": "^1.9.4",
-
-    "@react-google-maps/api": "^2.20.5",
     "dotenv": "^16.4.7",
-
+    "leaflet": "^1.9.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.1.1"
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.28.1",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
