--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,9 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "leaflet": "^1.9.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-leaflet": "^4.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.28.1",
     "react-scroll": "^1.9.0"
